--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@types/quill": "^2.0.14",
 		"arweave": "^1.14.4",
-		"gun": "^0.2020.1239"
+		"gun": "^0.2020.1239",
+		"quill": "^1.3.7"
 	}
 }
