--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
+		"@nomicfoundation/hardhat-toolbox": "^4.0.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"autoprefixer": "^10.4.17",
+		"erc721a-upgradeable": "^4.2.3",
+		"hardhat": "^2.20.1",
 		"postcss": "^8.4.35",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
@@ -24,9 +27,13 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@openzeppelin/contracts": "^5.0.2",
+		"@openzeppelin/contracts-upgradeable": "^5.0.2",
+		"@tableland/evm": "^4.5.1",
 		"@types/quill": "^2.0.14",
 		"arweave": "^1.14.4",
 		"gun": "^0.2020.1239",
+		"openzeppelin-solidity": "^2.2.0",
 		"quill": "^1.3.7"
 	}
 }
