--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
 		"@openzeppelin/contracts": "^5.0.2",
 		"@openzeppelin/contracts-upgradeable": "^5.0.2",
 		"@tableland/evm": "^4.5.1",
+		"@tableland/sdk": "^5.2.0",
 		"@types/quill": "^2.0.14",
 		"arweave": "^1.14.4",
+		"ethers": "^5.7.2",
 		"gun": "^0.2020.1239",
 		"openzeppelin-solidity": "^2.2.0",
 		"quill": "^1.3.7"
