--- a/package.json
+++ b/package.json
@@ -34,11 +34,14 @@
 		"@types/quill": "^2.0.14",
 		"@web3-storage/w3up-client": "^12.4.1",
 		"arweave": "^1.14.4",
+		"bcrypt": "^5.1.1",
 		"buffer": "^6.0.3",
+		"crypto-js": "^4.2.0",
 		"dotenv": "^16.4.5",
 		"ethers": "^5.7.2",
 		"gun": "^0.2020.1239",
 		"hardhat": "^2.20.1",
+		"jsonwebtoken": "^9.0.2",
 		"openzeppelin-solidity": "^2.2.0",
 		"quill": "^1.3.7"
 	}
