--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,9 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
+	"@tableland/evm": "^4.5.1",
+	"@tableland/sdk": "^5.2.0",
+	"ethers": "^5.7.2",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
