--- a/backend/package.json
+++ b/backend/package.json
@@ -22,31 +22,34 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/jwt": "^10.1.0",
     "@nestjs/platform-express": "^10.0.0",
     "bcrypt": "^5.1.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
+    "ipld": "^0.30.2",
+    "mime": "^4.0.1",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
-	"@tableland/evm": "^4.5.1",
-	"@tableland/sdk": "^5.2.0",
-	"@web3-storage/w3up-client": "^12.4.1",
-	"ethers": "^5.7.2",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@tableland/evm": "^4.5.1",
+    "@tableland/sdk": "^5.2.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "@web3-storage/w3up-client": "^12.5.0",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "ethers": "^5.7.2",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
