--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "vite dev --port 3000",
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -13,16 +13,13 @@
 		"@nomicfoundation/hardhat-toolbox": "^2.0.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/adapter-node": "^5.0.1",
-		"@sveltejs/adapter-static": "^3.0.1",
 		"@sveltejs/adapter-vercel": "^5.2.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"autoprefixer": "^10.4.17",
 		"erc721a-upgradeable": "^4.2.3",
-		"postcss": "^8.4.35",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
-		"tailwindcss": "^3.4.1",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
@@ -33,18 +30,14 @@
 		"@openzeppelin/contracts-upgradeable": "^5.0.2",
 		"@tableland/evm": "^4.5.1",
 		"@tableland/sdk": "^5.2.0",
-		"@types/quill": "^2.0.14",
 		"@web3-storage/w3up-client": "^12.4.1",
-		"arweave": "^1.14.4",
 		"bcrypt": "^5.1.1",
 		"buffer": "^6.0.3",
 		"crypto-js": "^4.2.0",
 		"dotenv": "^16.4.5",
 		"ethers": "^5.7.2",
-		"gun": "^0.2020.1239",
 		"hardhat": "^2.20.1",
 		"jsonwebtoken": "^9.0.2",
-		"openzeppelin-solidity": "^2.2.0",
-		"quill": "^1.3.7"
+		"openzeppelin-solidity": "^2.2.0"
 	}
 }
